--- a/docker_dev/docker-compose.yaml
+++ b/docker_dev/docker-compose.yaml
@@ -5,4 +5,6 @@ services:
       dockerfile: Dockerfile.dev
     volumes:
       - ../:/opt/app
+    ports:
+      - 8080:8080
     command: [ 'tail', '-f', '/dev/null' ]
