--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -7,7 +7,7 @@ COPY ./ /tmp/app
 RUN pip config set global.disable-pip-version-check true
 RUN pip install -r requirements-pip.txt
 RUN python -m pip install .[dev]
-#
-#WORKDIR /opt/app
-#
-#RUN rm -rf /tmp/app
+
+WORKDIR /opt/app
+
+RUN rm -rf /tmp/app
